bug: fixed text sizing issue on overflow funder on splash_funders template

--- a/src/theme/deployment/components/_display-group.scss
+++ b/src/theme/deployment/components/_display-group.scss
@@ -76,10 +76,9 @@ plh-tmpl-display-group .display-group-wrapper[data-param-style~="parent_point"] 
     display: block;
     max-height: 160px;
     max-width: 160px;
-    padding: 32px 16px 16px 16px;
   }
   .tmpl-image-container {
-    padding: 0 !important;
+    padding: 32px 16px 16px 16px;
   }
 }
 
